@@ -1,8 +1,11 @@
+GREEN='\033[0;32m'
+NC='\033[0m'
+
 rm -rf target
 
 mkdir -p target/mods
 
-echo "building astro"
+echo "${GREEN}building astro${NC}"
 
 rm -rf astro/target
 
@@ -12,7 +15,7 @@ javac -d astro/target/classes astro/src/main/java/module-info.java astro/src/mai
 
 jar -cfe target/mods/astro.jar org.astro.World -C astro/target/classes .
 
-echo "building greetings"
+echo "${GREEN}building greetings${NC}"
 
 rm -rf greetings/target
 
@@ -22,6 +25,14 @@ javac -modulepath target/mods -d greetings/target/classes greetings/src/main/jav
 
 jar -cfe target/mods/greetings.jar com.greetings.Main -C greetings/target/classes .
 
-echo "running greeting application"
+echo "${GREEN}running greeting application${NC}"
 
 java -modulepath target/mods -m com.greetings/com.greetings.Main
+
+echo "${GREEN}linking application${NC}"
+
+jlink --module-path target/mods/:$JAVA_HOME/jmods --add-modules com.greetings --output target/greetings-image
+
+echo "${GREEN}run from image${NC}"
+
+./target/greetings-image/bin/com.greetings
